--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+::after,
+::before {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    /* outline: 1px solid red; */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* utilities */
+
+ul {
+    list-style: none;
+}
+
+button {
+    border: none;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+header {
+    position: fixed;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    height: 78px;
+}
+
+.hero-bg {
+    min-height: 100vh;
+    width: 100vw;
+    background: url(https://images.pexels.com/photos/4245826/pexels-photo-4245826.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+    background-color: rgb(4, 13, 92);
+    color: #fff;
+    padding-top: 80px;
+}
+
+.logo {
+    padding: 1em 0 0 1em;
+}
+
+.main-nav {
+    position: absolute;
+    right: 10%;
+    top: 1em;
+}
+
+.main-nav ul {
+    display: flex;
+}
+
+.main-nav li {
+    padding: 0 1em;
 }
