designed home page

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@ ul {
 
 button {
     border: none;
+    cursor: pointer;
+    font-family: inherit;
 }
 
 a {
@@ -23,30 +25,31 @@ a {
     text-decoration: none;
 }
 
+body {
+    font-family: 'Poppins', serif;
+}
+
+h1 {
+    font-family: 'Supermercado One', serif;
+    color: #fff;
+}
+
 header {
     position: fixed;
     width: 100vw;
     top: 0;
     left: 0;
-    height: 78px;
+    height: 80px;
+    background-color: #022a44;
 }
 
-.hero-bg {
-    min-height: 100vh;
-    width: 100vw;
-    background: url(https://images.pexels.com/photos/4245826/pexels-photo-4245826.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-    background-color: rgb(4, 13, 92);
-    color: #fff;
-    padding-top: 80px;
-}
-
-.logo {
+header .logo {
     padding: 1em 0 0 1em;
 }
 
 .main-nav {
     position: absolute;
-    right: 10%;
+    right: 25%;
     top: 1em;
 }
 
@@ -56,4 +59,118 @@ header {
 
 .main-nav li {
     padding: 0 1em;
+    font-weight: bold;
+    color: #fff;
+}
+
+.hero-bg {
+    min-height: 100vh;
+    width: 100vw;
+    background: url(https://images.pexels.com/photos/870711/pexels-photo-870711.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=1024);
+    background-size: 100% 100%;
+    color: #fff;
+    padding-top: 80px;
+}
+
+.highlight h3 {
+    font-size: 2rem;
+    color: #022a44;
+    max-width: 500px;
+}
+
+.hero-text {
+    position: relative;
+    background-color: #595a5aa9;
+    backdrop-filter: blur(2px);
+    min-height: calc(100vh - 80px);
+    padding: 0 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    clip-path: inset(0 0 100% 0);
+    animation: hero 400ms linear forwards;
+}
+
+.hero-text p {
+    /* text-align: center; */
+    max-width: 500px;
+}
+
+@keyframes hero {
+    to {
+        clip-path: inset(0 0 0 0);
+    }
+}
+
+.align-left {
+    width: 500px;
+}
+
+.cta {
+    background-color: transparent;
+    color: #022a44;
+    padding: 1.3em 3em;
+    border-radius: 30px;
+    margin-top: 3em;
+    position: relative;
+    outline: none;
+    overflow: hidden;
+    font-weight: bold;
+}
+
+.cta::after,
+.cta::before {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background-color: #fff;
+    z-index: -2;
+    border-radius: inherit;
+}
+
+.cta::after {
+    background-color: #8dc2c2;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 700ms 200ms;
+    z-index: -1;
+}
+
+.cta:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
+.cta:hover {
+    color: #343434;
+}
+
+.socials {
+    position: absolute;
+    /* background-color: red; */
+    left: 2em;
+    bottom: 2em;
+    display: flex;
+    flex-direction: column;
+}
+
+.socials i {
+    transition: 300ms ease-in-out;
+}
+
+.socials i:hover {
+    color: #8dc2c2;
+    transform: translateX(1px);
+}
+
+
+/* Destinations */
+
+.destinations {
+    min-height: 100vh;
+    padding-top: 80px;
 }
