--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ header {
     left: 0;
     height: 80px;
     background-color: #022a44;
+    z-index: 100;
 }
 
 header .logo {
@@ -173,4 +174,69 @@ header .logo {
 .destinations {
     min-height: 100vh;
     padding-top: 80px;
+}
+
+.search-bar {
+    width: 100vw;
+    padding: 2em 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-bar input {
+    width: 70vw;
+    height: 32px;
+    padding-left: 1em;
+    font-family: inherit;
+    text-align: center;
+    outline: none;
+    border: 1px solid #022a44;
+    border-radius: 35px;
+}
+
+.destination {
+    /* background: url(https://images.pexels.com/photos/1423580/pexels-photo-1423580.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=1024); */
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    min-height: 80vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.destination:nth-child(odd)>.description {
+    transform: translateX(100%);
+}
+
+.description {
+    background-color: #8dc2c25b;
+    backdrop-filter: blur(3px);
+    padding: 1em;
+}
+
+.description h2 {
+    display: inline-block;
+    font-size: 1.2rem;
+}
+
+.description h3 {
+    font-size: 2rem;
+    text-transform: capitalize;
+}
+
+.description p {
+    padding-top: 2em;
+}
+
+.destination button {
+    display: block;
+    margin-top: 2em;
+    padding: 1.2em 3em;
+    background-color: #022a44;
+    color: #fff;
+    border-radius: 4px;
+}
+
+.destination button:hover {
+    background-color: #022a44de;
 }
