--- a/src/index.css
+++ b/src/index.css
@@ -38,13 +38,13 @@ header {
     width: 100vw;
     top: 0;
     left: 0;
-    height: 80px;
+    height: 60px;
     background-color: #022a44;
     z-index: 100;
 }
 
 header .logo {
-    padding: 1em 0 1em 1em;
+    padding: 0em 0 1em 1em;
 }
 
 .logo {
@@ -65,17 +65,53 @@ header .logo {
 .main-nav {
     position: absolute;
     right: 25%;
-    top: 1em;
+    bottom: 0;
 }
 
 .main-nav ul {
     display: flex;
 }
 
-.main-nav li {
-    padding: 0 1em;
+.main-nav .list>li {
+    height: 60px;
+    padding: 1.2em 1em;
     font-weight: bold;
     color: #fff;
+    border-bottom: 1px solid #022a44;
+}
+
+.main-nav .list>li:hover {
+    background-color: #fff;
+    color: #022a44;
+}
+
+.dest {
+    position: relative;
+}
+
+.dest .more {
+    display: none;
+    width: 200px;
+    background-color: #fff;
+    border: 1px solid #022a44;
+    border-radius: 3px;
+    font-weight: normal;
+    position: absolute;
+    top: 100%;
+    left: 20%;
+}
+
+.dest:hover .more {
+    display: block;
+}
+
+.more li {
+    color: #022a44;
+    padding: .5em;
+}
+
+.more li:hover {
+    border-bottom: 1px solid #8dc2c25b;
 }
 
 .hero-bg {
@@ -85,7 +121,7 @@ header .logo {
     background-size: 100% 100%;
     background-attachment: fixed;
     color: #fff;
-    padding-top: 80px;
+    padding-top: 60px;
 }
 
 .highlight h3 {
@@ -182,9 +218,10 @@ header .logo {
     transform: translateX(1px);
 }
 
-#services {
-    /* background-color: red; */
-}
+
+/* #services {
+    background-color: red;
+} */
 
 #services h1 {
     text-align: center;
@@ -288,6 +325,30 @@ header .logo {
     outline: none;
     border: 1px solid #022a44;
     border-radius: 35px;
+}
+
+select-pure {
+    --select-height: 44px;
+    --select-width: 100%;
+    --border-radius: 4px;
+    --border-width: 1px;
+    --border-color: #022a44;
+    --padding: 0 10px;
+    --dropdown-z-index: 2;
+    --disabled-background-color: #bdc3c7;
+    --disabled-color: #ecf0f1;
+    --background-color: #fff;
+    --color: #022a44;
+    --hover-background-color: #e3e3e3;
+    --hover-color: #000;
+    --selected-background-color: #e3e3e3;
+    --selected-color: #000;
+    --dropdown-gap: 0;
+    --font-size: 14px;
+    --font-family: inherit;
+    --font-weight: 400;
+    --select-outline: 2px solid #e3e3e3;
+    --dropdown-items: 4;
 }
 
 .destination {
