--- a/src/index.css
+++ b/src/index.css
@@ -75,8 +75,9 @@ header {
 
 .main-nav {
     position: absolute;
-    right: 25%;
+    right: 20%;
     bottom: 0em;
+    display: none;
 }
 
 .main-nav ul {
@@ -93,12 +94,136 @@ header {
     font-weight: bold;
     color: #fff;
     border-bottom: 3px solid #022a44;
-    border-radius:4px;
+    border-radius: 4px;
 }
 
 .main-nav .list>li:hover {
     background-color: #fff;
     color: #022a44;
+}
+
+.main-nav .dest {
+    position: relative;
+    cursor: pointer;
+    margin-right: 4px;
+}
+
+.main-nav .dest::after {
+    content: '>';
+    position: absolute;
+    right: 1.5px;
+    transform: rotateZ(90deg) scaleY(1.3);
+    transition: transform 300ms linear;
+}
+
+.main-nav .dest:hover::after {
+    transform: rotateZ(-90deg) scaleY(1.3);
+}
+
+.main-nav .dest .more {
+    display: block;
+    width: 200px;
+    background-color: #fff;
+    border: 1px solid #8dc2c2;
+    border-radius: 3px;
+    font-weight: normal;
+    position: absolute;
+    top: 100%;
+    left: 20%;
+    clip-path: inset(0 0 100% 0);
+}
+
+.main-nav .dest:hover .more {
+    animation: more 200ms linear forwards;
+}
+
+@keyframes more {
+    to {
+        clip-path: inset(0 0 0 0);
+    }
+}
+
+.main-nav .more li {
+    color: #022a44;
+    padding: .5em;
+}
+
+.main-nav .more li:hover {
+    background-color: #8dc2c2;
+}
+
+.hamb {
+    background: #ffffff;
+    width: 30px;
+    height: 4px;
+    position: absolute;
+    right: 2em;
+    bottom: .5em;
+    cursor: pointer;
+    z-index: 300;
+}
+
+.hamb::after,
+.hamb::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: inherit;
+}
+
+.hamb::after {
+    top: -6px;
+}
+
+.hamb::before {
+    bottom: -6px;
+}
+
+.small-menu {
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: calc(100vw - 2em);
+    height: 100vh;
+    padding: 2em 1em;
+    background-color: #fff;
+    transform: translateX(110vw);
+    transition: 300ms linear;
+    pointer-events: none;
+}
+
+.small-menu.open {
+    transform: translateX(0);
+}
+
+.small-menu li {
+    text-transform: uppercase;
+    line-height: 1.5;
+    pointer-events: all;
+}
+
+.small-menu a {
+    display: block;
+}
+
+.small-menu a:hover {
+    background-color: #8dc2c2;
+}
+
+.small-menu span {
+    display: none;
+}
+
+.small-menu button {
+    padding: .5em .6em;
+    border-radius: 0;
+    background-color: #8dc2c2;
+    color: #ff0000;
+    position: absolute;
+    top: 0;
+    left: -1.6em;
+    pointer-events: all;
 }
 
 
@@ -107,13 +232,8 @@ header {
 footer {
     min-height: 50vh;
     background-color: #8dc2c2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     place-items: center;
-}
-
-footer h1 {
-    text-align: center;
+    padding: 1em 1.5em;
 }
 
 footer .logo {
@@ -149,56 +269,6 @@ footer li:hover {
     margin: 10px;
 }
 
-.dest {
-    position: relative;
-    cursor: pointer;
-    margin-right: 4px;
-}
-
-.dest::after {
-    content: '>';
-    position: absolute;
-    right: 1.5px;
-    transform: rotateZ(90deg) scaleY(1.3);
-    transition: transform 300ms linear;
-}
-
-.dest:hover::after {
-    transform: rotateZ(-90deg) scaleY(1.3);
-}
-
-.dest .more {
-    display: block;
-    width: 200px;
-    background-color: #fff;
-    border: 1px solid #8dc2c2;
-    border-radius: 3px;
-    font-weight: normal;
-    position: absolute;
-    top: 100%;
-    left: 20%;
-    clip-path: inset(0 0 100% 0);
-}
-
-.dest:hover .more {
-    animation: more 200ms linear forwards;
-}
-
-@keyframes more {
-    to {
-        clip-path: inset(0 0 0 0);
-    }
-}
-
-.more li {
-    color: #022a44;
-    padding: .5em;
-}
-
-.more li:hover {
-    background-color: #8dc2c2;
-}
-
 #root>div {
     padding-bottom: 2em;
 }
@@ -214,7 +284,7 @@ footer li:hover {
 }
 
 .highlight h1 {
-    font:bold 2rem;
+    font: bold 2rem;
     color: #022a44;
     max-width: 500px;
 }
@@ -416,9 +486,11 @@ footer li:hover {
 .buttons {
     margin-top: 2em;
 }
-.buttons button{
-    padding:.8em 3em;
+
+.buttons button {
+    padding: .8em 3em;
 }
+
 .buttons button:last-child {
     background-color: #fff;
     color: #000;
@@ -489,17 +561,16 @@ select-pure {
 
 .destination {
     background-size: 100% 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.destination:nth-child(odd)>.description {
-    transform: translateX(100%);
 }
 
 .description {
     background-color: #8dc2c25b;
     backdrop-filter: blur(8px);
+    padding: 1em;
+}
+
+.user-message {
+    text-align: center;
     padding: 1em;
 }
 
@@ -588,21 +659,26 @@ select-pure {
 .booking button:hover {
     opacity: .95;
 }
-/* About */
-.about{
-    padding:90px 6em 4em 6em;
 
+
+/* About */
+
+.about {
+    padding: 90px 2em 2em 2em;
 }
-.about h1{
-    text-align:center;
+
+.about h1 {
+    text-align: center;
 }
-.testimonials{
-    background-color:#fff;
+
+.testimonials {
+    background-color: #fff;
 }
-.testimonials>div{
+
+.testimonials>div {
     position: relative;
     height: 500px;
-    width: 50%;
+    width: 90%;
     margin: 0 auto;
     overflow: hidden;
 }
@@ -614,17 +690,19 @@ select-pure {
     min-height: calc(300px - 3rem);
     padding: 1em 2em;
     background-color: #fff;
-    transform: scale(0) translate(50%,50%);
+    transform: scale(0) translate(50%, 50%);
     transition: 1s linear;
-    border-radius:10px;
+    border-radius: 10px;
 }
 
 .testimonial.active {
     transform: scale(1);
     z-index: 2;
     background-color: #8dc2c25b;
-    transform-origin:top;
+    transform-origin: top;
 }
+
+
 /* contacts */
 
 .contacts {
@@ -632,32 +710,27 @@ select-pure {
     background-color: #8dc2c25b;
 }
 
-.contacts h1,.testimonials h1 {
+.contacts h1,
+.testimonials h1 {
     text-align: center;
-}
-
-.contacts-info {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
 }
 
 .contacts-info>div,
 .contacts-info form {
     padding: 2em;
 }
-.contacts-info label{
-    font-weight:bold;
+
+.contacts-info label {
+    font-weight: bold;
 }
-.contacts-info>div {
-    display: flex;
-    justify-content: center;
+
+.contacts-info li:hover {
+    text-decoration: underline;
 }
-.contacts-info li:hover{
-    text-decoration:underline;
-}
+
 .contacts input,
 .contacts textarea {
-    width: 50%;
+    width: 90%;
     padding-left: 1em;
     border: 1px solid #022a44;
 }
@@ -670,4 +743,55 @@ select-pure {
 .contacts button {
     background-color: #022a44;
     color: #fff;
+}
+
+@media (min-width:800px) {
+    .main-nav {
+        display: block;
+    }
+    .hamb {
+        display: none;
+    }
+    .small-menu {
+        display: none;
+    }
+}
+
+@media (min-width:650px) {
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0;
+    }
+    footer h1 {
+        text-align: center;
+    }
+    .about {
+        padding: 90px 4em 4em 4em;
+    }
+    .testimonials>div {
+        width: 55%;
+    }
+    .contacts-info {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .contacts input,
+    .contacts textarea {
+        width: 70%;
+    }
+}
+
+@media (min-width:900px) {
+    footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .destination {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .destination:nth-child(odd)>.description {
+        transform: translateX(100%);
+    }
 }
